# Sizalizer

./: .gitignore  .gitmodules  Dockerfile  README.md  bax.sh  build_dfg_pass.sh  build_for_etiss.sh  compile_embench_iot.sh  compile_musl.sh  compose.yaml  disassemble_embench_bins.sh  disassemble_musl_bins.sh  execute_etiss_embench.sh  local_build.sh  out_hard_float_old.txt  out_new.txt  out_soft_float_old.txt  static_analyze.sh  static_analyze_embench.sh  static_analyze_embench_iot.sh  static_analyze_musl.sh  static_dfg_analyze_embench_iot.sh  static_dfg_analyze_musl.sh
analysis/: binary.py  dfg.py  dynamic.py  inst_calculor.py  static.py
analysis/helper/: evaluator.py  instruction_model.py  modes.py  parse_utils.py  plotter.py
analysis/lib/: evaluator.py  instruction_model.py  modes.py  plotter.py
analysis/tools/: evaluator.py  instruction_model.py  plotter.py
example/: build_hello.sh  hello.c  it.c  nand.c  primes.c
llvm-pass-plugin/: CMakeLists.txt  Makefile  README.md
llvm-pass-plugin/src/: pass.cpp
res/: CMakeLists.txt  LinuxMakefileCFG  config.mak.DFG_ANALYSIS  config.mak.RISCV_BUILD  config.mak.RISCV_BUILD_BASE  config.mak.RISCV_BUILD_hard_float  elffile.ini.in  etiss-semihost.specs  etiss.ld.in  memsegs.ini.in  rv32gc-toolchain.cmake
res/riscv_crt0/: CMakeLists.txt  crt0.S  csr.h  fixes.c  trap_handler.c
res/src/: CMakeLists.txt
res/src/aha-mont64/: CMakeLists.txt
res/src/crc32/: CMakeLists.txt
res/src/cubic/: CMakeLists.txt
res/src/edn/: CMakeLists.txt
res/src/huffbench/: CMakeLists.txt
res/src/matmult-int/: CMakeLists.txt
res/src/minver/: CMakeLists.txt
res/src/nbody/: CMakeLists.txt
res/src/nettle-aes/: CMakeLists.txt
res/src/nettle-sha256/: CMakeLists.txt
res/src/nsichneu/: CMakeLists.txt
res/src/picojpeg/: CMakeLists.txt
res/src/qrduino/: CMakeLists.txt
res/src/sglib-combined/: CMakeLists.txt
res/src/slre/: CMakeLists.txt
res/src/st/: CMakeLists.txt
res/src/statemate/: CMakeLists.txt
res/src/ud/: CMakeLists.txt
res/src/wikisort/: CMakeLists.txt
target_scrips/: build_for_etiss.sh  compile_embench_iot.sh  compile_linux.sh  compile_musl.sh  disassemble_embench_bins.sh  disassemble_linux_bins.sh  disassemble_musl_bins.sh  execute_etiss_embench.sh  static_analyze_embench.sh  static_analyze_musl.sh  static_dfg_analyze_embench_iot.sh  static_dfg_analyze_linux.sh  static_dfg_analyze_musl.sh
