macro(add_executable_etiss TARGET)
	set(SRC_FILES "${ARGN}")

	add_executable(${TARGET} ${SRC_FILES})
	add_dependencies(${TARGET} etiss_crt0)
	set(BIN_NAME ${TARGET})

	configure_file(${ETISS_ELFINI} ${TARGET}.ini @ONLY)
	target_link_libraries(${TARGET} etiss_crt0 support)

	install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}.ini DESTINATION ini)
	install(TARGETS ${TARGET} DESTINATION bin)
endmacro()
include_directories(../../support ../../riscv32/boards/ri5cyverilator ../../riscv32/chips/generic)
add_compile_options(-DCPU_MHZ=1)


add_subdirectory(aha-mont64)
add_subdirectory(edn)
add_subdirectory(huffbench) 
add_subdirectory(nettle-aes)
add_subdirectory(qrduino)
add_subdirectory(st)
add_subdirectory(matmult-int)
add_subdirectory(nettle-sha256)
add_subdirectory(statemate)
add_subdirectory(crc32)
add_subdirectory(minver)
add_subdirectory(nsichneu)
add_subdirectory(sglib-combined)
add_subdirectory(ud)
add_subdirectory(cubic)
add_subdirectory(nbody)
add_subdirectory(picojpeg)
add_subdirectory(slre)
add_subdirectory(wikisort)
